recap stories fix
